[tool.poetry]
name = "chatgpt"
version = "0.1.0"
description = "Just a ChatGPT interface for fun!"
authors = ["Robin Rheem <robinrheem@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
requests = "^2.28.1"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
